# jarvis-brain-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  leak-denylist.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
benchmark/: analyze.py  questions.json  runner.py
benchmark/results/: .gitkeep
brain/api/: _stubs.py  executors.py  mcp.py  mcp_tools.py  query.py  query_path.py
brain/core/: circuit.py  graph_schema.py  logging.py  paths.py
brain/extractors/: ffcss.py
brain/federation/: ffcss_resolver.py  imports_detector.py  merger.py
brain/graphify_adapter/: backends.py  router.py  runner.py
brain/llm/: __init__.py  prompts.py
brain/publishers/: api_index.py  common.py  super_index.py
brain/scripts/: demo_ingest.py  export_schema.py  serve.py  validate_graph.py
brain/utils/: camelcase.py
brain/viz/: insights_ffcss.py  insights_wrapper.py  schema_adapter.py
config/: groups.example.yml
docs/: ARCHITECTURE.md
schemas/: graph_v1.json
tests/: conftest.py
tests/fixtures/golden/: sample_graph.json
tests/integration/: test_pipeline.py
tests/unit/: conftest.py  test_api_index_publisher.py  test_brain_explain.py  test_brain_ffcss_tool.py  test_camelcase.py  test_circuit.py  test_federation.py  test_ffcss_detection.py  test_ffcss_insights.py  test_ffcss_resolver.py  test_graph_schema.py  test_graphify_backends.py  test_graphify_router.py  test_graphify_runner.py  test_insights_html_click_injection.py  test_insights_wrapper.py  test_llm_prompts_ffcss.py  test_logging.py  test_mcp_handler.py  test_merger_schema_contract.py  test_openrouter_backend.py  test_paths.py  test_publishers_common.py  test_query.py  test_query_path.py  test_query_ranking.py  test_qwen_backend.py  test_schema_adapter.py  test_schema_adapter_roundtrip.py  test_serve.py  test_super_index.py  test_validate_graph_cli.py
